--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Blog</title>
-</head>
-<body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Quartro 🖊️</h1></a>
-            <p>Latest tech </p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+<%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
-    <div class="not-found content">
-        Oops! Page not found 😞
-    </div>
-</body>
-</html>
+<div class="not-found content">Oops! Page not found 😞</div>
+<%- include("./partials/footer.ejs")%>
