--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Blog</title>
-</head>
-<body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Quartro 🖊️</h1></a>
-            <p>Latest tech </p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+<%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
-    <div class="about content">
-        <h2>About us</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos, debitis provident reiciendis numquam nulla commodi ullam obcaecati quibusdam dicta veniam harum quasi delectus eius voluptas asperiores, autem ipsam ut facilis? Quidem maiores veniam praesentium distinctio animi asperiores neque quod architecto enim? Voluptatem, nostrum laboriosam exercitationem dicta deserunt facilis quisquam.</p>
-    </div>
-</body>
-</html>
+<div class="about content">
+  <h2>About us</h2>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos, debitis
+    provident reiciendis numquam nulla commodi ullam obcaecati quibusdam dicta
+    veniam harum quasi delectus eius voluptas asperiores, autem ipsam ut
+    facilis? Quidem maiores veniam praesentium distinctio animi asperiores neque
+    quod architecto enim? Voluptatem, nostrum laboriosam exercitationem dicta
+    deserunt facilis quisquam.
+  </p>
+</div>
+<%- include("./partials/footer.ejs")%>
