--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,35 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Blog</title>
-</head>
-<body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Quartro 🖊️</h1></a>
-            <p>Latest tech </p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+<%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
-    <div class="create content">
-        <h2>New Blog</h2>
-        <form>
-            <label for="title">Blog Title: </label>
-            <input type="text" id="title" required>
-            <label for="snippet">Blog Snippet: </label>
-            <input type="text" id="snippet" required>
-            <label for="body">Blog Body: </label>
-            <textarea type="text" id="body" required></textarea>
-            <button>Submit</button>
-        </form>
-    </div>
-</body>
-</html>
+<div class="create content">
+  <h2>New Blog</h2>
+  <form>
+    <label for="title">Blog Title: </label>
+    <input type="text" id="title" required />
+    <label for="snippet">Blog Snippet: </label>
+    <input type="text" id="snippet" required />
+    <label for="body">Blog Body: </label>
+    <textarea type="text" id="body" required></textarea>
+    <button>Submit</button>
+  </form>
+</div>
+<%- include("./partials/footer.ejs")%>
