--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,8 +1,8 @@
 <%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
-<div class="create content">
-  <h2>New Blog</h2>
+<div class="create-blog content">
   <form>
+    <h2>Create Blog</h2>
     <label for="title">Blog Title: </label>
     <input type="text" id="title" required />
     <label for="snippet">Blog Snippet: </label>
