Created post request to handle new blog form

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,14 +1,14 @@
 <%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
 <div class="create-blog content">
-  <form>
+  <form action="/blogs" method="post">
     <h2>Create Blog</h2>
     <label for="title">Blog Title: </label>
-    <input type="text" id="title" required />
+    <input type="text" id="title" name="title" required />
     <label for="snippet">Blog Snippet: </label>
-    <input type="text" id="snippet" required />
+    <input type="text" id="snippet" name="snippet" required />
     <label for="body">Blog Body: </label>
-    <textarea type="text" id="body" required></textarea>
+    <textarea type="text" id="body" name="body" required></textarea>
     <button>Submit</button>
   </form>
 </div>
