--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ nav li {
 }
 nav h1 {
   font-size: 3em;
-  letter-spacing: 7px;
+  letter-spacing: 10px;
 }
 nav p,
 nav a {
@@ -64,7 +64,12 @@ h3 {
   margin-left: 20px;
 }
 /* index styles */
+.blogs:hover{
+  cursor: pointer;
+}
+
 /* details styles */
+
 /* create styles */
 .create-blog form {
   max-width: 400px;
