--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
 
   <% if(blogs.length > 0) {%>
     <%blogs.forEach(blog => {%>
+      <a class="single" href="/blogs/<%= blog._id %>">
         <h3 class="title"><%= blog.title%></h3>
         <p class="snippet"><%=blog.snippet %></p>
+        <hr>
         <br>
+      </a>
     <%})%>
   <%} else { %>
     <p>There are no blogs...</p>
