--- a/public/style.css
+++ b/public/style.css
@@ -64,11 +64,32 @@ h3 {
   margin-left: 20px;
 }
 /* index styles */
-.blogs:hover{
-  cursor: pointer;
+.blogs a {
+  display: block;
+  margin: 40px auto;
+  padding-left: 30px;
+  border-left: 5px solid rgb(68, 38, 38) ;
+}
+.blogs a:hover h3{
+  color:rgb(68, 32, 32)
+}
+/* details styles */
+.details {
+  position: relative;
 }
 
-/* details styles */
+.delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 20%;
+  padding: 8px;
+}
+
+.delete:hover {
+  cursor: pointer;
+  box-shadow: 1px 2px 3px rgba(48, 48, 48, 0.658);
+}
 
 /* create styles */
 .create-blog form {
@@ -97,4 +118,8 @@ textarea {
   border: 0;
   font-size: 1.2em;
   cursor: pointer;
+}
+
+hr {
+  opacity: 0.3;
 }
