--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,4 +1,5 @@
-<%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
+<%- include("./partials/head.ejs")%>
+<%- include("./partials/nav.ejs")%>
 
 <div class="create-blog content">
   <form action="/blogs" method="post">
