Created and updated README file

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/head.ejs")%> <%- include("./partials/nav.ejs")%>
 
 <div class="about content">
-  <h2>About us</h2>
+  <h2>About Us</h2>
   <p>
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi eos, debitis
     provident reiciendis numquam nulla commodi ullam obcaecati quibusdam dicta
