--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,11 @@ nav a {
   color: rgb(59, 59, 59);
   font-weight: 300;
 }
+
+nav a:hover{
+  border-bottom: 3px solid #222;
+}
+
 footer {
   color: #777;
   text-align: center;
@@ -120,6 +125,7 @@ textarea {
   border: 0;
   font-size: 1.2em;
   cursor: pointer;
+  border-radius: 7px;
 }
 
 hr {
